--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Color Generator App</title>
+    <!-- CSS -->
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
-  <body></body>
+  <body>
+    <h2 class="color">#1F85DE</h2>
+    <button class="generateColor">GENERATE</button>
+    <!-- JavaScript -->
+    <script src="./js/script.js"></script>
+  </body>
 </html>
